--- a/fixedBreakages.html
+++ b/fixedBreakages.html
@@ -105,8 +105,8 @@
         </div>
         <div class="mdl-mini-footer__right-section">
           <ul class="mdl-mini-footer__link-list">
-            <li><a href="index.html">Report Boat Breakage</a></li>
-            <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+            <li><a href="index.html">Report Breakage</a></li>
+            <li><a href="viewBreakages.html">View Breakages</a></li>
             <li><a href="fixedBreakages.html">View Fixed</a></li>
           </ul>
         </div>
