--- a/index.html
+++ b/index.html
@@ -144,14 +144,8 @@
               </div>
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label class="mdl-textfield__label" for="details">Details</label>
-                <textarea class="mdl-textfield__input" type="text" rows="5" id="details" required placeholder="Enter Breakage Details"></textarea>
+                <textarea class="mdl-textfield__input" type="text" rows="10" id="details" required placeholder="Enter Breakage Details"></textarea>
               </div>
-
-              <br />
-              <br />
-              <br />
-              <br />
-
               <p>
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent addValue" type="submit">
                             Submit
@@ -175,13 +169,12 @@
         </div>
         <div class="mdl-mini-footer__right-section">
           <ul class="mdl-mini-footer__link-list">
-            <li><a href="index.html">Report Boat Breakage</a></li>
-            <li><a href="viewBreakages.html">View Boat Breakages</a></li>
+            <li><a href="index.html">Report Breakage</a></li>
+            <li><a href="viewBreakages.html">View Breakages</a></li>
             <li><a href="fixedBreakages.html">View Fixed</a></li>
           </ul>
         </div>
       </footer>
-
 
     </main>
 
