--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <!-- Include Firebase Library -->
   <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
   <!-- Add Breakage to databse JavaScript -->
-  <script src="jscript/usage.js"></script>
+  <script src="jscript/addBreakage.js"></script>
 
   <script src=styles/material.min.js></script>
 </body>
